# jenga-appointment-optimizer

./: .env.example  .gitignore  PATCH_NOTES.md  README.md  SECURITY.md  background_scheduler.py  calendar_sync.py  config.py  config.yaml  config_loader.py  database.py  engine_core.py  events.py  exceptions.py  google_calendar_auth.py  init_db.py  main.py  ml.py  models.py  notifier.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py  state_machine.py  utils.py
docs/: architecture.md
jenga/: __init__.py
jenga/adapters/: __init__.py
jenga/adapters/api/: __init__.py  fastapi_adapter.py
jenga/adapters/calendar/: __init__.py  calendly_adapter.py  protocol.py  storage.py
jenga/adapters/notifications/: __init__.py  notification_scheduler.py
jenga/adapters/scheduler/: __init__.py  apscheduler_adapter.py
jenga/adapters/storage/: __init__.py  sqlalchemy_adapter.py
jenga/advisory/: __init__.py  ml_advisor.py
jenga/core/: __init__.py  time_utils.py
jenga/core/decisions/: decision_gateway.py
jenga/core/events/: domain_events.py
jenga/core/orchestration/: orchestrator.py
jenga/core/state/: workflow_state.py
jenga/infrastructure/: __init__.py  app_context.py
routers/: __init__.py  calendar.py
services/: __init__.py  appointment_service.py  cascade_service.py  client_service.py
tests/: test_domain.py  test_orchestrator.py  test_patch_regression.py  test_risk_engine.py
tests/simulation/: dentist_clinic_simulation.py
