[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jenga-appointment-optimizer"
version = "2.0.0"
description = "A portfolio prototype for no-show risk scoring and cancellation-slot recovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "SQLAlchemy>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "APScheduler>=3.10,<4.0",
    "python-dotenv>=1.0,<2.0",
    "pytz>=2024.1",
    "sendgrid>=6.11,<7.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
]
google-calendar = [
    "google-api-python-client>=2.0,<3.0",
    "google-auth>=2.0,<3.0",
    "google-auth-oauthlib>=1.0,<2.0",
]
twilio = ["twilio>=9.0,<10.0"]

[tool.setuptools]
py-modules = [
    "background_scheduler",
    "calendar_sync",
    "config",
    "config_loader",
    "database",
    "engine_core",
    "events",
    "exceptions",
    "google_calendar_auth",
    "init_db",
    "main",
    "ml",
    "models",
    "notifier",
    "scheduler",
    "schemas",
    "state_machine",
    "utils",
]

[tool.setuptools.packages.find]
include = ["jenga*", "routers*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
